# geant4-long-scintillator-counter

./: CMakeLists.txt  MyRunManager.cc  MyRunManager.hh  README  action.cc  action.hh  construction.cc  construction.hh  construction_CD.cc  countParticles.cc  countParticles.hh  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  light_guide.stl  makeAnalysis.C  physics.cc  physics.hh  pmt.cc  pmt.hh  read.C  run.cc  run.hh  run.mac  scoring.mac  scoring_begin.mac  scoring_end.mac  stepping.cc  stepping.hh  tof_Detector.cc  tof_Detector.hh  vis.mac
